# ros2_services

./: README.md
src/customs/: CMakeLists.txt  package.xml
src/customs/srv/: Factorial.srv  InputMatrixExponentialDiscretizationFromSystemByAccuracy.srv  InputMatrixExponentialDiscretizationFromSystemByStep.srv  MatrixAddition.srv  MatrixAdditionByNumber.srv  MatrixDivisionByNumber.srv  MatrixExponentialDiscretizationByAccuracy.srv  MatrixExponentialDiscretizationByStep.srv  MatrixIdentity.srv  MatrixInversion.srv  MatrixMaxElement.srv  MatrixMinElement.srv  MatrixMultiplication.srv  MatrixMultiplicationByNumber.srv  MatrixSquare.srv  MatrixSubtraction.srv  PrintMatrix.srv  SystemMatrixExponentialDiscretizationByAccuracy.srv  SystemMatrixExponentialDiscretizationByStep.srv
src/math_service/: CMakeLists.txt  package.xml
src/math_service/src/: math_service.cpp
src/matrix_service/: CMakeLists.txt  package.xml
src/matrix_service/src/: matrix_service.cpp  matrix_service_test.cpp
src/signal_service/: CMakeLists.txt  package.xml
src/signal_service/src/: signal_service.cpp  signal_service_test.cpp
src/state_space_service/: CMakeLists.txt  package.xml
src/state_space_service/src/: state_space_service.cpp
